--- a/public/login.html
+++ b/public/login.html
@@ -177,7 +177,7 @@
     email: document.getElementById("email").value,
     password: document.getElementById("password").value
   };
-  const res = await fetch("http://localhost:3000/login", {
+  const res = await fetch("/login", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(data)
