--- a/public/signup.html
+++ b/public/signup.html
@@ -189,7 +189,7 @@
     email: document.getElementById("email").value,
     password: document.getElementById("password").value
   };
-  const res = await fetch("http://localhost:3000/signup", {
+  const res = await fetch("/signup", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(data)
